# piet-cosmic-text

./: .build.yml  .drone.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-PATRON.md  MAINTAINERS.md  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.woodpecker/: github.yml  msrv.yml  test.yml
ci/: ci.sh
examples/: draw_text.rs  sample_05.rs  sample_08.rs
examples/util/: display.rs
fonts/: .gitignore  LICENSE.txt  README.md
resources/dejavu-fonts-ttf-2.37/: README.md
src/: attributes.rs  channel.rs  embedded_fonts.rs  export_work.rs  lib.rs  lines.rs  metadata.rs  text.rs  text_layout.rs  text_layout_builder.rs
src/fonts/: LICENSE.txt
tests/: font_loading.rs  smoke.rs
