# SPDX-License-Identifier: LGPL-3.0-or-later OR MPL-2.0
# This file is a part of `piet-cosmic-text`.
# 
# `piet-cosmic-text` is free software: you can redistribute it and/or modify it under the
# terms of either:
# 
# * GNU Lesser General Public License as published by the Free Software Foundation, either
#   version 3 of the License, or (at your option) any later version.
# * Mozilla Public License as published by the Mozilla Foundation, version 2.
# * The Patron License (https://github.com/notgull/piet-cosmic-text/blob/main/LICENSE-PATRON.md)
#   for sponsors and contributors, who can ignore the copyleft provisions of the above licenses
#   for this project.
# 
# `piet-cosmic-text` is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE. See the GNU Lesser General Public License or the Mozilla Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License and the Mozilla
# Public License along with `piet-cosmic-text`. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "piet-cosmic-text"
version = "0.2.1"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A text layout engine for piet based on cosmic-text"
repository = "https://github.com/notgull/piet-cosmic-text"
license = "LGPL-3.0-or-later OR MPL-2.0"
documentation = "https://docs.rs/piet-cosmic-text"
homepage = "https://github.com/notgull/piet-cosmic-text#readme"

[dependencies]
async-channel = "1.8.0"
cosmic-text = { version = "0.8.0", default-features = false, features = ["std"] }
piet = { version = "0.6.2", default-features = false }
rayon-core = { version = "1.11.0", optional = true }

[dev-dependencies]
cosmic-text = { version = "0.8.0", features = ["swash"] }
softbuffer = { version = "0.2.0", default-features = false, features = ["x11"] }
winit = { version = "0.28.1", default-features = false, features = ["x11"] }

[features]
default = ["rayon"]
rayon = ["rayon-core"]
