# SPDX-License-Identifier: LGPL-3.0-or-later OR MPL-2.0
# This file is a part of `piet-cosmic-text`.
# 
# `piet-cosmic-text` is free software: you can redistribute it and/or modify it under the
# terms of either:
# 
# * GNU Lesser General Public License as published by the Free Software Foundation, either
#   version 3 of the License, or (at your option) any later version.
# * Mozilla Public License as published by the Mozilla Foundation, version 2.
# 
# `piet-cosmic-text` is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE. See the GNU Lesser General Public License or the Mozilla Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License and the Mozilla
# Public License along with `piet-cosmic-text`. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "piet-cosmic-text"
version = "0.3.2"
edition = "2021"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A text layout engine for piet based on cosmic-text"
repository = "https://git.sr.ht/~notgull/piet-cosmic-text"
license = "LGPL-3.0-or-later OR MPL-2.0"
documentation = "https://docs.rs/piet-cosmic-text"
homepage = "https://git.sr.ht/~notgull/piet-cosmic-text"

[dependencies]
cosmic-text = { version = "0.9.0", default-features = false, features = ["swash"] }
event-listener = "2.5.3"
line-straddler = "0.2.0"
piet = { version = "0.6.2", default-features = false }
rayon-core = { version = "1.11.0", optional = true }
swash = { version = "0.1.8", default-features = false, features = ["scale"] }
tinyvec = { version = "1.6.0", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.37", default-features = false, optional = true }
yazi = { version = "0.1.6", optional = true }

[build-dependencies]
yazi = { version = "0.1.6", optional = true }

[features]
default = ["compress_fonts", "std", "tracing"]
compress_fonts = ["embed_fonts", "yazi"]
embed_fonts = []
rayon = ["rayon-core"]
std = ["cosmic-text/std"]

[dev-dependencies]
bytemuck = "1.13.1"
cosmic-text = { version = "0.9.0", features = ["swash"] }
softbuffer = { version = "0.3.0", default-features = false, features = ["x11"] }
tiny-skia = { version = "0.11.1", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = "0.3.17"
winit = { version = "0.28.1", default-features = false, features = ["x11"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }

[workspace]
members = ["run-wasm"]
